ajout lecteur des vidéos